<resources>
    <string name="app_name">Androids Dont Eat Carbs</string>
    <string name="action_settings">Summary Page</string>
    <string name="goals">Set Goals</string>
    <string name="diary_main">Main Menu </string>
    <string name="edit_diary">Edit Diary</string>
    <string name="username">username</string>
    <string name="saveUsername"> Save</string>
    <string name="saved_text">saved_text</string>
    <string name="pick_date">Select Date</string>
    <string name="saved_date">Saved_Date</string>
    <string name="foodentry">Food</string>
    <string name="calories">Calories</string>
    <string name="submitToDiary">Submit</string>
    <string name="breakfast">Breakfast goes here</string>
    <string name="lunch">Lunch goes here</string>
    <string name="supper">Supper goes here</string>
    <string name="target_cals">Target</string>
    <string name="remaining_cals">Remaining</string>

</resources>
