<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:id="@+id/saved_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="25dp"
        android:text="@string/saved_date"
        android:paddingLeft="125dp" />

    <EditText
        android:id="@+id/foodType"
        android:hint="@string/foodentry"
        android:textSize="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="150dp"
        android:layout_width="222dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/calories"
        android:hint="@string/calories"
        android:textSize="30dp"
        android:layout_marginTop="-60dp"
        android:layout_marginLeft="275dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"/>

    <Button
        android:id="@+id/submitToDiary"
        android:text="@string/submitToDiary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <!--<GridView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/gridView"-->
        <!--android:numColumns="4"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:choiceMode="multipleChoice">-->

        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textSize="10sp">Target</TextView>&ndash;&gt;-->

        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textSize="10sp">Num1</TextView>&ndash;&gt;-->
        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textSize="10sp">Used</TextView>&ndash;&gt;-->
        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textSize="10sp">Num2</TextView>&ndash;&gt;-->

    <!--</GridView>-->




</LinearLayout>